--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       #- NEXTCLOUD_ADMIN_USER=username
       #- NEXTCLOUD_ADMIN_PASSWORD=password
       - TRUSTED_PROXIES=swag
-      - OVERWRITEPROTOCOL=https
+      #- OVERWRITEPROTOCOL=https
       #- OVERWRITECLIURL=https://nextcloud.domainname
       #- OVERWRITEHOST=nextcloud.domainname
       #- NEXTCLOUD_TRUSTED_DOMAINS=nextcloud.domainname
