Update and rename docker-compose (2).yml to smalldns/docker-compose.yml

--- a/smalldns/docker-compose.yml
+++ b/smalldns/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     environment:
       - TZ=Asia/Kolkata
     volumes:
-      - /volume1/docker/lightdns/dnsmasq.conf:/etc/dnsmasq.conf
+      #- /volume1/docker/lightdns/dnsmasq.conf:/etc/dnsmasq.conf
       - /etc/localtime:/etc/localtime:ro
       - /etc/hosts:/etc/hosts:ro
     networks:
