--- a/smalldns/dnsmasq.conf
+++ b/smalldns/dnsmasq.conf
@@ -18,5 +18,9 @@ log-facility=/var/log/dnsmasq.log
 # Set the cache size (optional, set to 150 by default)
 cache-size=0
 
+# Disable IPv6
+filterwin2k  # This is useful to filter AAAA records for Windows compatibility
+no-dhcpv6    # Ensure no DHCPv6 services are provided
+
 # Keep the process running in the foreground (useful for Docker containers)
 keep-in-foreground
