--- a/smalldns/dnsmasq.conf
+++ b/smalldns/dnsmasq.conf
@@ -11,6 +11,9 @@ addn-hosts=/etc/hosts
 localise-queries
 no-negcache
 
+# Ignore AAAA (IPv6) queries
+filter-aaaa
+
 # Log all DNS queries for debugging
 log-queries
 log-facility=/var/log/dnsmasq.log
