--- a/smalldns/dnsmasq.conf
+++ b/smalldns/dnsmasq.conf
@@ -11,8 +11,8 @@ addn-hosts=/etc/hosts
 localise-queries
 no-negcache
 
-# Ignore AAAA (IPv6) queries
-filter-aaaa
+# Forward AAAA queries to a non-existent address (block IPv6 queries)
+server=/./#
 
 # Log all DNS queries for debugging
 log-queries
