--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -65,19 +65,19 @@ services:
     networks:
       - internal
 
-  ldap:
-    image: ghcr.io/goauthentik/ldap:latest
-    container_name: authentik-ldap
-    restart: unless-stopped
-    ports:
-    - 389:3389
-    - 636:6636
-    env_file:
-      - /data/secret.env #Portainer data folder
-    networks:
-      - internal
-    depends_on:
-      - server
+  #ldap:
+    #image: ghcr.io/goauthentik/ldap:latest
+    #container_name: authentik-ldap
+    #restart: unless-stopped
+    #ports:
+    #- 389:3389
+    #- 636:6636
+    #env_file:
+    #  - /data/secret.env #Portainer data folder
+    #networks:
+    #  - internal
+    #depends_on:
+    #  - server
     #environment:
       #AUTHENTIK_HOST: https://your-authentik.tld
       #AUTHENTIK_INSECURE: "false"
