--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -83,7 +83,7 @@ services:
       - server
     environment:
       AUTHENTIK_HOST: https://authentik:9443/
-      AUTHENTIK_INSECURE: "false"
+      AUTHENTIK_INSECURE: "true"
       AUTHENTIK_TOKEN: LN3ZfpgHqwsQLh3hilZO8TK05LIiqA5OEsU39o6D8IaTZbgndGF6K5wW5GRW
 
       
