--- a/speedtest/docker-compose.yml
+++ b/speedtest/docker-compose.yml
@@ -9,7 +9,7 @@ services:
             - DB_CONNECTION=sqlite
             - APP_TIMEZONE=Asia/Kolkata
             #- PUBLIC_DASHBOARD=true
-            #- SPEEDTEST_SCHEDULE=0 */1 * * * # optional: schedule a speedtest with an cronjob https://crontab.guru
+            - SPEEDTEST_SCHEDULE=0 */3 * * * # optional: schedule a speedtest with an cronjob https://crontab.guru
         volumes:
             - /volume1/docker/speedtest:/config
             - /etc/localtime:/etc/localtime:ro
