--- a/whatsupdocker/docker-compose.yml
+++ b/whatsupdocker/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   whatsupdocker:
     image: getwud/wud
-    container_name: wud
+    container_name: whatsupdocker
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /etc/localtime:/etc/localtime:ro
