--- a/speedtest/docker-compose.yml
+++ b/speedtest/docker-compose.yml
@@ -8,6 +8,7 @@ services:
             - APP_KEY=base64:DDmUvzlrJTykO5JwjRIrUvjfU6LQuYjUjybyjxaCxbQ= # How to generate an app key: https://speedtest-tracker.dev/
             - DB_CONNECTION=sqlite
             - APP_TIMEZONE=Asia/Kolkata
+            - TZ=Asia/Kolkata
             #- PUBLIC_DASHBOARD=true
             - SPEEDTEST_SCHEDULE=0 */3 * * * # optional: schedule a speedtest with an cronjob https://crontab.guru
         volumes:
