--- a/mediafusion/docker-compose.yml
+++ b/mediafusion/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     image: mhdzumair/mediafusion:4.3.33
     container_name: mediafusion
     command: >
-      sh -c "find /mediafusion -type f -exec sed -i
-      's|https://raw.githubusercontent.com/mhdzumair/MediaFusion/main/resources/json/scraper_config.json|https://raw.githubusercontent.com/kesavananbu/MediaFusion/main/resources/json/scraper_config.json|g' {} +
+      sh -c "sed -i
+      's|https://raw.githubusercontent.com/mhdzumair/MediaFusion/main/resources/json/scraper_config.json|https://raw.githubusercontent.com/kesavananbu/MediaFusion/main/resources/json/scraper_config.json|g' /mediafusion/db/config.py
       && /mediafusion/deployment/startup.sh"
     env_file:
       - /data/secret.env #Portainer data folder
@@ -46,8 +46,8 @@ services:
     container_name: mediafusion-worker
     #command: ["dramatiq", "api.task", "-p", "1", "-t", "4"]
     command: >
-      sh -c "find /mediafusion -type f -exec sed -i
-      's|https://raw.githubusercontent.com/mhdzumair/MediaFusion/main/resources/json/scraper_config.json|https://raw.githubusercontent.com/kesavananbu/MediaFusion/main/resources/json/scraper_config.json|g' {} +
+      sh -c "sed -i
+      's|https://raw.githubusercontent.com/mhdzumair/MediaFusion/main/resources/json/scraper_config.json|https://raw.githubusercontent.com/kesavananbu/MediaFusion/main/resources/json/scraper_config.json|g' /mediafusion/db/config.py
       && dramatiq api.task -p 1 -t 4"
     env_file:
       - /data/secret.env #Portainer data folder
