--- a/mediafusion/docker-compose.yml
+++ b/mediafusion/docker-compose.yml
@@ -5,8 +5,9 @@ services:
     command: >
       sh -c "sed -i
       's|https://raw.githubusercontent.com/mhdzumair/MediaFusion/main/resources/json/scraper_config.json|https://raw.githubusercontent.com/kesavananbu/MediaFusion/main/resources/json/scraper_config.json|g' /mediafusion/db/config.py
+      && curl -sL https://raw.githubusercontent.com/kesavananbu/MediaFusion/main/resources/json/scraper_config.json -o /mediafusion/resources/json/scraper_config.json
       && echo '==== FILE CONTENTS AFTER REPLACE ===='
-      && cat /mediafusion/db/config.py
+      && cat /mediafusion/resources/json/scraper_config.json
       && /mediafusion/deployment/startup.sh"
     env_file:
       - /data/secret.env #Portainer data folder
@@ -50,8 +51,9 @@ services:
     command: >
       sh -c "sed -i
       's|https://raw.githubusercontent.com/mhdzumair/MediaFusion/main/resources/json/scraper_config.json|https://raw.githubusercontent.com/kesavananbu/MediaFusion/main/resources/json/scraper_config.json|g' /mediafusion/db/config.py
+      && curl -sL https://raw.githubusercontent.com/kesavananbu/MediaFusion/main/resources/json/scraper_config.json -o /mediafusion/resources/json/scraper_config.json
       && echo '==== FILE CONTENTS AFTER REPLACE ===='
-      && cat /mediafusion/db/config.py
+      && cat /mediafusion/resources/json/scraper_config.json
       && dramatiq api.task -p 1 -t 4"
     env_file:
       - /data/secret.env #Portainer data folder
