--- a/mediafusion/docker-compose.yml
+++ b/mediafusion/docker-compose.yml
@@ -119,8 +119,10 @@ services:
     image: mhdzumair/qbittorrent-webdav:latest
     container_name: qbittorrentwebdav
     restart: unless-stopped
+    environment:
+      - WEBUI_PORT=8083
     ports:
-      - "8083:80"
+      - "8083:8083"
       - "6881:6881/tcp"
       - "6881:6881/udp"
     volumes:
