--- a/rclone/docker-compose.yml
+++ b/rclone/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - /volume1/docker/rclone/config:/config/rclone
       - /volume1/docker/rclone/data:/data
-    ports:
+    #ports:
       #- 5572:5572
     restart: unless-stopped
     command: rcd --rc-web-gui --rc-addr :5572 --rc-user ${RCLONE_USER} --rc-pass ${RCLONE_PASS} --rc-serve
