--- a/smalldns/dnsmasq.conf
+++ b/smalldns/dnsmasq.conf
@@ -11,6 +11,13 @@ addn-hosts=/etc/hosts
 localise-queries
 no-negcache
 
+# Making authorative for local queries
+local=/
+# Refusing to forward other than local queries
+domain-needed
+# Limiting to private ip reserve in response
+bogus-priv
+
 #block IPv6 queries
 filter-AAAA
 
