--- a/video-duplicate-finder/docker-compose.yml
+++ b/video-duplicate-finder/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     networks:
       - internal
     environment:
+      USER_ID: "1026"        # your Linux user 
+      GROUP_ID: "100"        # your primary group
       TZ: "Asia/Kolkata"
       DARK_MODE: "1"       # optional
     volumes:
