--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - /dev/dri:/dev/dri
     volumes:
       - /volume1/immich_data:/data
+      - /volume1/homes/kesavananbu:/mnt/media/backup_photoshoot:ro
       - /etc/localtime:/etc/localtime:ro
     environment:
       TZ: Asia/Kolkata
