--- a/socket-proxy/docker-compose.yml
+++ b/socket-proxy/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   docker-proxy:
     image: tecnativa/docker-socket-proxy:latest
-    container_name: portracker-docker-proxy
+    container_name: docker-proxy
     restart: unless-stopped
     environment:
       - CONTAINERS=1
