--- a/socket-proxy/docker-compose.yml
+++ b/socket-proxy/docker-compose.yml
@@ -1,6 +1,6 @@
-networks:
-    internal:
-      external: true
+#networks:
+#    internal:
+#      external: true
 
 services:
   docker-proxy:
@@ -15,7 +15,7 @@ services:
       - POST=0
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-    #ports:
-    #  - "2375:2375"
-    networks:
-      - internal
+    ports:
+      - "2375:2375"
+    #networks:
+    #  - internal
