--- a/socket-proxy/docker-compose.yml
+++ b/socket-proxy/docker-compose.yml
@@ -1,12 +1,9 @@
-#networks:
-#    internal:
-#      external: true
-
 services:
   docker-proxy:
     image: tecnativa/docker-socket-proxy:latest
     container_name: docker-proxy
     restart: unless-stopped
+    network_mode: host
     environment:
       - CONTAINERS=1
       - IMAGES=1
@@ -17,5 +14,3 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     ports:
       - "2375:2375"
-    #networks:
-    #  - internal
